[gd_scene load_steps=15 format=3 uid="uid://dix8syu6ud4je"]

[ext_resource type="Script" path="res://monster.gd" id="1_3ha7s"]
[ext_resource type="Texture2D" uid="uid://bsg2m34ht1p8s" path="res://sprites/SoftJam/MonsterChew/5.png" id="2_2dwqf"]
[ext_resource type="Texture2D" uid="uid://bmcj3dbky3lh6" path="res://sprites/SoftJam/MonsterIdle/2.png" id="2_ron55"]
[ext_resource type="Texture2D" uid="uid://2wd0tm6d2k6j" path="res://sprites/SoftJam/MonsterIdle/3.png" id="3_1bjwf"]
[ext_resource type="Texture2D" uid="uid://bct6cuf5yx17l" path="res://sprites/SoftJam/MonsterChew/4.png" id="3_iviac"]
[ext_resource type="Texture2D" uid="uid://k2n6i18b4l6l" path="res://sprites/SoftJam/MonsterChew/2.png" id="4_ofxws"]
[ext_resource type="Texture2D" uid="uid://lrk0ifp72ad7" path="res://sprites/SoftJam/MonsterIdle/1.png" id="4_qtkct"]
[ext_resource type="Texture2D" uid="uid://bgll2nlwnj05m" path="res://sprites/SoftJam/MonsterChew/3.png" id="5_c8ki5"]
[ext_resource type="Texture2D" uid="uid://3ofyhamoyxv1" path="res://sprites/SoftJam/MonsterChew/1.png" id="6_v12k8"]
[ext_resource type="Texture2D" uid="uid://dttd00ak666gx" path="res://sprites/SoftJam/MonsterMidChew/1.png" id="7_h0dvu"]
[ext_resource type="Texture2D" uid="uid://i4m0fxce53tt" path="res://sprites/SoftJam/MonsterMidChew/3.png" id="8_ba61r"]
[ext_resource type="Texture2D" uid="uid://drit4aymbmkm0" path="res://sprites/SoftJam/MonsterMidChew/4.png" id="9_ap3l8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6q8xk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2dwqf")
}, {
"duration": 1.0,
"texture": ExtResource("3_iviac")
}, {
"duration": 1.0,
"texture": ExtResource("4_ofxws")
}, {
"duration": 1.0,
"texture": ExtResource("5_c8ki5")
}, {
"duration": 1.0,
"texture": ExtResource("6_v12k8")
}, {
"duration": 1.0,
"texture": ExtResource("7_h0dvu")
}, {
"duration": 1.0,
"texture": ExtResource("8_ba61r")
}, {
"duration": 0.8,
"texture": ExtResource("3_iviac")
}, {
"duration": 1.0,
"texture": ExtResource("9_ap3l8")
}],
"loop": false,
"name": &"chewing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ron55")
}, {
"duration": 1.0,
"texture": ExtResource("3_1bjwf")
}, {
"duration": 1.0,
"texture": ExtResource("4_qtkct")
}, {
"duration": 1.0,
"texture": ExtResource("3_1bjwf")
}, {
"duration": 1.0,
"texture": ExtResource("3_1bjwf")
}, {
"duration": 1.0,
"texture": ExtResource("3_1bjwf")
}, {
"duration": 1.0,
"texture": ExtResource("2_ron55")
}, {
"duration": 1.0,
"texture": ExtResource("2_ron55")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iw13e"]
size = Vector2(296, 235)

[node name="Monster" type="Area2D"]
position = Vector2(20, 4)
script = ExtResource("1_3ha7s")

[node name="IdleSpriteTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(307, 494)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_6q8xk")
animation = &"chewing"
speed_scale = 0.5

[node name="MonsterCollision" type="CollisionShape2D" parent="."]
position = Vector2(309, 489)
shape = SubResource("RectangleShape2D_iw13e")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="IdleSpriteTimer" to="." method="_on_idle_sprite_timer_timeout"]
